--- a/.gitignore
+++ b/.gitignore
@@ -149,5 +149,5 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python
-static
-staticfiles
+static/
+staticfiles/
